--- a/SizeableWebView.xaml
+++ b/SizeableWebView.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="MicrosoftBlogs.View.Components.SizeableWebView"
+    x:Class="Sample.View.Components.SizeableWebView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:MicrosoftBlogs.View.Components"
